--- a/src/main/resources/templates/toys.html
+++ b/src/main/resources/templates/toys.html
@@ -14,7 +14,7 @@
         <div class="col-12 col-md-3" th:each="pr : ${products}">
             <div class="card h-100 text-center">
                 <img th:if="${pr.imageUrl != null}" th:src="${pr.imageUrl}" class="card-img-top squared-circle">
-                <div th:if="${pr.imageUrl == null}" class="p-4 text-muted">Image not shown</div>
+                <img th:if="${pr.imageUrl == null}" th:src="@{https://placehold.co/400x400/EEE/CCC?text=PetStore}" class="card-img-top squared-circle placeholder-img">
                 <div class="card-body">
                     <div class="fw-semibold" th:text="${pr.name}"></div>
                     <div class="text-primary" th:text="${'₱' + #numbers.formatDecimal(pr.price,0,'COMMA',2,'POINT')}"></div>
@@ -27,6 +27,13 @@
     </div>
 </main>
 <div th:replace="fragments/footer :: foot"></div>
-<script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+<div th:replace="~{fragments/footer :: modal}"></div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+        crossorigin="anonymous"></script>
+
+        <script th:replace="~{fragments/footer :: modalScript}"></script>
 </body>
 </html>
